--- a/front-end/package.json
+++ b/front-end/package.json
@@ -12,6 +12,7 @@
     "@material-ui/core": "^4.11.4",
     "@mui/material": "^5.8.5",
     "@mui/x-date-pickers": "^5.0.0-alpha.6",
+    "calendar-reactjs": "^0.1.0",
     "date-fns": "^2.23.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
